[MediaStream][Mac] Video presets sometimes don't work https://bugs.webkit.org/show_bug.cgi?id=165214 <rdar://problem/29444533>

Reviewed by Jer Noble.

* platform/mediastream/mac/AVVideoCaptureSource.h:
* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setPreset): Set videoSettings width and height.
(WebCore::AVVideoCaptureSource::setupCaptureSession): Store videoSettings object for later use.
  Set videoSettings width and height.
(WebCore::AVVideoCaptureSource::bestSessionPresetForVideoDimensions):
(WebCore::AVVideoCaptureSource::sizeForPreset): New.


Canonical link: https://commits.webkit.org/182874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209188 268f45cc-cd09-0410-ab3c-d52691b4dbfc